get video durations.
